--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,44 @@
-# Python-generated files
+############################
+# Python
+############################
 __pycache__/
-*.py[oc]
+*.py[cod]
+*.egg-info/
 build/
 dist/
-wheels/
-*.egg-info
-
-# Virtual environments
-.venv
-env
 .env
+.venv/
+env/
+
+############################
+# Node / React / Vite
+############################
+node_modules/
+dist/
+dist-ssr/
+.vite/
+
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
+
+*.local
+
+############################
+# Editor / OS
+############################
+.vscode/
+.idea/
+.DS_Store
+Thumbs.db
+
+############################
+# Misc
+############################
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
